[package]
categories = ["database"]
description = "An easy sql generator."
documentation = "https://docs.rs/sqlrender"
edition = "2021"
keywords = ["database", "mysql"]
license = "MIT"
name = "sqlrender"
readme = "README.md"
repository = "https://github.com/trevyn/sqlrender"
rust-version = "1.70"
version = "0.8.0"

[dependencies]
sqlrender-impl = { path = "../sqlrender-impl", version = "=0.8.0" }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
cfg-if = "1"
directories-next = "2"
itertools = "0.11"
log = "0.4"
once_cell = "1"
rusqlite = { version = "0.29", features = ["bundled", "blob"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
toml = "0.8"

[dev-dependencies]
rustversion = "1"
tokio = { version = "1.23.1", features = ["rt-multi-thread", "macros"] }
trybuild = { version = "1", features = ["diff"] }
