[package]
categories = ["database"]
description = "An easy sql generator."
documentation = "https://docs.rs/sqlrender"
edition = "2021"
keywords = ["database", "mysql"]
license = "MIT"
name = "sqlrender"
readme = "README.md"
repository = "https://github.com/jdomzhang/sqlrender"
rust-version = "1.70"
version = "0.1.0"

[dependencies]
sqlrender-impl = { path = "../sqlrender-impl", version = "=0.1.0" }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
cfg-if = "1"
itertools = "0.11"
log = "0.4"
once_cell = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"

[dev-dependencies]
rustversion = "1"
tokio = { version = "1.23.1", features = ["rt-multi-thread", "macros"] }
