[package]
description = "Internal implementation details for Turbosql."
edition = "2021"
license = "MIT"
name = "turbosql-impl"
repository = "https://github.com/trevyn/turbosql"
rust-version = "1.70"
version = "0.8.0"

[lib]
proc-macro = true

[dependencies]
fs2 = "0.4"
once_cell = "1"
proc-macro-error = "1"
proc-macro2 = "1"
quote = "1"
regex = "1.5.5"
serde = { version = "1", features = ["derive"] }
syn = { version = "2", features = ["extra-traits", "full"] }

[features]
sqlite-compat-no-strict-tables = []
# Needs to be set during parent crate tests
test = []
